# incremental-haskell

./: .gitignore  LICENSE  Log.md  README.md  incremental.cabal  stack.yaml
app/: Main.hs
doc/: report.tex  reportbb.bib
src/: .Incremental.hs.swp  .State.hs.swp  ArrayFold.hs  Incremental.hs  Kind.hs  Node.hs  Observer.hs  RecomputeHeap.hs  Recompute_Heap.hs  Scope.hs  StabilizationNum.hs  State.hs  Types.hs  Utils.hs  Var.hs
test/: .Spec.hs.swp  Spec.hs
