name:                incremental
version:             0.1.0.0
synopsis:            Incremental for Haskell
description:         Please see README.md
homepage:            cs240h.scs.stanford.edu
license:             BSD3
license-file:        LICENSE
author:              Jiyue Wang, Kaixi Ruan
maintainer:          jennifer.w0930@gmail.com
copyright:           Jiyue Wang, Kaixi Ruan
category:            algorithm
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

library
  hs-source-dirs:      src
  exposed-modules:     Incremental
  build-depends:       base >= 4.7
                     , lens-simple >= 0.1.0.8
                     , heaps
                     , transformers >= 0.4.2.0
  default-language:    Haskell2010
  ghc-options:         -Wall
