name:                incremental
version:             0.1.0.0
synopsis:            Incremental for Haskell
description:         Please see README.md
homepage:            cs240h.scs.stanford.edu
license:             BSD3
license-file:        LICENSE
author:              Jiyue Wang, Kaixi Ruan
maintainer:          jennifer.w0930@gmail.com
copyright:           Jiyue Wang, Kaixi Ruan
category:            algorithm
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

library
  hs-source-dirs:      src
  exposed-modules:     Incremental
                     , Types
                     , Var
                     , Node
                     , State
                     , Kind
                     , Scope
                     , Utils
                     , StabilizationNum
                     , Observer
                     , ArrayFold
  build-depends:       base >= 4.7
                     , lens-simple >= 0.1.0.8
                     , containers
                     , transformers >= 0.4.2.0
                     , exceptions
                     , async
  default-language:    Haskell2010
  ghc-options:        -Wall  -fno-warn-unused-do-bind -fno-warn-missing-signatures -fno-warn-name-shadowing

test-suite incremantal-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7
                     , lens-simple >= 0.1.0.8
                     , containers
                     , transformers >= 0.4.2.0
                     , incremental
                     , hspec
  default-language:    Haskell2010
  ghc-options:        -Wall  -fno-warn-unused-do-bind -fno-warn-missing-signatures -fno-warn-name-shadowing -fno-warn-unused-imports

executable incremental-exe
  hs-source-dirs:     app
  main-is:            Main.hs
  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind
  build-depends:      base
                    , incremental
  default-language:   Haskell2010
